src/objects/System_Design_Quote__c.object
<CustomObject>
    <description>AstrumCRM - System Design Quote.  Each System Design can have one or more System Design Quotes.  Each quote provides the sales consultant with the ability to adjust the negotiated price of the System Design based on the Calculated System Price.  Opportunities must choose a winning System Design Quote in order to close.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>&apos;pete&apos;</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Community_Program__c</fullName>
        <formula>TEXT(System_Design__r.Property__r.Affiliate_Community_Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Community Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Electric_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All-Electric Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Electricity_Consumption_kWh__c</fullName>
        <label>Annual Electricity Consumption (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Property_Tax_Bill__c</fullName>
        <label>Annual Property Tax Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Of_Pricing_Date__c</fullName>
        <label>&quot;As Of&quot; Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Astrum_Overall_Site_Quality__c</fullName>
        <label>Astrum Overall Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avoided_Utility_Rate__c</fullName>
        <label>Astrum Avoided Utility Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_API_Message__c</fullName>
        <label>CPF API Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_API_Status__c</fullName>
        <label>CPF API Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Annual_Increase__c</fullName>
        <label>CPF Annual Increase</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPF_Customer_Id__c</fullName>
        <label>CPF Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Document_Generation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPF Document Generation Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPF_Down_Payment__c</fullName>
        <label>CPF Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Eligibility_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by callback from CPF when Credit Check is completed.</description>
        <inlineHelpText>Updated by callback from CPF when Credit Check is completed.</inlineHelpText>
        <label>CPF Eligibility Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPF_Eligibility_Initiate_Message__c</fullName>
        <label>CPF Eligibility Initiate Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Eligibility_Initiate__c</fullName>
        <label>CPF Eligibility Initiate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Generate_Document_Initiate__c</fullName>
        <label>CPF Generate Document Initiate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Generate_Document_Message__c</fullName>
        <label>CPF Generate Document Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Input_Error_Message__c</fullName>
        <label>CPF Input Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Lease_Term__c</fullName>
        <label>CPF Lease Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_Monthly_Payment__c</fullName>
        <label>CPF Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_PrepaidDocument_Generation_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPF PrepaidDocument Generation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_API_Message__c</fullName>
        <label>CPF Prepaid API Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_API_Status__c</fullName>
        <label>CPF Prepaid API Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Disq_Reasons__c</fullName>
        <label>CPF Prepaid Disq. Reasons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Generate_Document_Initiate__c</fullName>
        <label>CPF Prepaid Generate Document Initiate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Generate_Document_Message__c</fullName>
        <label>CPF Prepaid Generate Document Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Price_Per_Watt__c</fullName>
        <label>CPF Prepaid Price Per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Product_Name__c</fullName>
        <label>CPF Prepaid Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Proposal_Id__c</fullName>
        <label>CPF Prepaid Proposal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid_Template_Id__c</fullName>
        <label>CPF Prepaid Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Prepaid__c</fullName>
        <label>CPF Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Price_Per_Watt__c</fullName>
        <inlineHelpText>CPF Input Price Per Watt</inlineHelpText>
        <label>CPF Price Per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPF_Product_Disqual_Reasons__c</fullName>
        <label>CPF Product Disqual. Reasons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Product_Name__c</fullName>
        <label>CPF Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Proposal_Id__c</fullName>
        <label>CPF Proposal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Quick_Template_Id__c</fullName>
        <label>CPF Quick Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Sent_for_Signature_Message__c</fullName>
        <label>CPF Sent for Signature Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPF_Sent_for_Signature__c</fullName>
        <label>CPF Sent for Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_Year_One_Production__c</fullName>
        <label>CPF Year One Production</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Price_per_Watt__c</fullName>
        <formula>System_Design__r.Calculated_Price_per_Watt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Price per Watt ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_System_Price__c</fullName>
        <formula>System_Design__r.Calculated_System_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated System Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Lease_Rate_kWh__c</fullName>
        <label>Channel Partner Lease Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Scenario__c</fullName>
        <label>Closed Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commision_Additional_Adders__c</fullName>
        <label>Commision Additional Adders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commision_Cash_Back__c</fullName>
        <description>Cash back for Customer</description>
        <inlineHelpText>Denotes the amount of Cash Back that was selected in the calculator</inlineHelpText>
        <label>Commision Cash Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commision_Purchase_Percentage__c</fullName>
        <label>Commision Purchase Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commision_Purchase__c</fullName>
        <label>Commision Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Design_Price__c</fullName>
        <description>Panel Pricing + Non-Panel Pricing + Trenching Pricing ( For Purchase)</description>
        <inlineHelpText>Panel Pricing + Non-Panel Pricing + Trenching Pricing ( For Purchase)</inlineHelpText>
        <label>Commission Design Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Lease_Discount_Amount__c</fullName>
        <label>Commission Lease Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Lease_Discount__c</fullName>
        <label>Commission Lease Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Lease_Percentage__c</fullName>
        <label>Commission Lease Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Lease__c</fullName>
        <label>Commission Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Plus_One_Percent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, one percent additional commission has been added to Commission Purchase and Lease</description>
        <inlineHelpText>If checked, one percent additional commission has been added to Commission Purchase and Lease</inlineHelpText>
        <label>Commission Plus One Percent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Plus_Two_Percent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, two percent additional commission has been added to Commission Purchase and Lease</description>
        <inlineHelpText>If checked, two percent additional commission has been added to Commission Purchase and Lease</inlineHelpText>
        <label>Commission Plus Two Percent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Price__c</fullName>
        <formula>IF (ISPICKVAL( Scenario_1_Financing_Type__c , &apos;Purchase&apos;),  Scenario_1_Design_Price__c , IF (ISPICKVAL( Scenario_2_Financing_Type__c , &apos;Purchase&apos;),  Scenario_2_Design_Price__c , IF (ISPICKVAL( Scenario_3_Financing_Type__c , &apos;Purchase&apos;),  Scenario_3_Design_Price__c,IF (ISPICKVAL( Scenario_4_Financing_Type__c , &apos;Purchase&apos;),  Scenario_4_Design_Price__c, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Purchase_Discount_Amount__c</fullName>
        <label>Commission Purchase Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Purchase_Discount__c</fullName>
        <label>Commission Purchase Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer_Baseline_SQ__c</fullName>
        <label>Community Program Offer Baseline SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer_Current_Tier__c</fullName>
        <label>Community Program Offer Current Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer_Early_Adopter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Program Offer Early Adopter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>System Design Quotes</relationshipLabel>
        <relationshipName>System_Design_Quotes_CP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualifying_Validation_Errors__c</fullName>
        <label>Disqualifying Validation Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Electric_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electric Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Adjusted_Price__c</fullName>
        <formula>System_Design__r.Calculated_System_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Adjusted Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Adjusted_Price_per_Watt__c</fullName>
        <formula>Final_Adjusted_Price__c / ( System_Design__r.Total_System_Size_kW__c * 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Adjusted Price per Watt ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Add_Ann_Consumption_kW__c</fullName>
        <label>Forecasted Add. Ann. Consumption (kW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hudson_Conf_Template__c</fullName>
        <label>Hudson Conf Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hudson_Contract_Signatory_1_Address__c</fullName>
        <description>Hudson Contract Signatory 1 Address</description>
        <inlineHelpText>Hudson Contract Signatory 1 Address</inlineHelpText>
        <label>Hudson Contract Signatory 1 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hudson_Contract_Signatory_1__c</fullName>
        <description>Hudson Contract Signatory 1</description>
        <inlineHelpText>Hudson Contract Signatory 1</inlineHelpText>
        <label>Hudson Contract Signatory 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hudson_Contract_Signatory_2_Address__c</fullName>
        <description>Hudson Contract Signatory 2 Address</description>
        <inlineHelpText>Hudson Contract Signatory 2 Address</inlineHelpText>
        <label>Hudson Contract Signatory 2 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hudson_Contract_Signatory_2__c</fullName>
        <description>Hudson Contract Signatory 2</description>
        <inlineHelpText>Hudson Contract Signatory 2</inlineHelpText>
        <label>Hudson Contract Signatory 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hudson_Enerbank_SAC__c</fullName>
        <label>Hudson Enerbank SAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_Federal_Tax_Credit__c</fullName>
        <label>Hudson Federal Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_Gross_Amount_Due__c</fullName>
        <description>Hudson Gross Amount Due</description>
        <inlineHelpText>Hudson Gross Amount Due</inlineHelpText>
        <label>Hudson Gross Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_Net_Proceeds__c</fullName>
        <description>Hudson Net Proceeds</description>
        <inlineHelpText>Hudson Net Proceeds</inlineHelpText>
        <label>Hudson Net Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_OID_Amount__c</fullName>
        <description>Hudson OID Amount</description>
        <inlineHelpText>Hudson OID Amount</inlineHelpText>
        <label>Hudson OID Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_APR__c</fullName>
        <description>Hudson RIL APR</description>
        <inlineHelpText>Hudson RIL APR</inlineHelpText>
        <label>Hudson RIL APR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Amount_Financed__c</fullName>
        <description>Hudson RIL Amount Financed</description>
        <inlineHelpText>Hudson RIL Amount Financed</inlineHelpText>
        <label>Hudson RIL Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Completion_Payment__c</fullName>
        <description>Hudson RIL Completion Payment</description>
        <inlineHelpText>Hudson RIL Completion Payment</inlineHelpText>
        <label>Hudson RIL Completion Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Est_Completion_Date__c</fullName>
        <description>Hudson RIL Est Completion Date</description>
        <inlineHelpText>Hudson RIL Est Completion Date</inlineHelpText>
        <label>Hudson RIL Est Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Est_Interconnect_Date__c</fullName>
        <description>Hudson RIL Est Interconnect Date</description>
        <inlineHelpText>Hudson RIL Est Interconnect Date</inlineHelpText>
        <label>Hudson RIL Est Interconnect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Finance_Charge__c</fullName>
        <description>Hudson RIL Finance Charge</description>
        <inlineHelpText>Hudson RIL Finance Charge</inlineHelpText>
        <label>Hudson RIL Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_First_Payment_Date__c</fullName>
        <description>Hudson RIL First Payment Date</description>
        <inlineHelpText>Hudson RIL First Payment Date</inlineHelpText>
        <label>Hudson RIL First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Interconnect_Payment__c</fullName>
        <description>Hudson RIL Interconnect Payment</description>
        <inlineHelpText>Hudson RIL Interconnect Payment</inlineHelpText>
        <label>Hudson RIL Interconnect Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Last_Payment_Date__c</fullName>
        <description>Hudson RIL Last Payment Date</description>
        <inlineHelpText>Hudson RIL Last Payment Date</inlineHelpText>
        <label>Hudson RIL Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Monthly_Payment__c</fullName>
        <description>Hudson RIL Monthly Payment
`</description>
        <inlineHelpText>Hudson RIL Monthly Payment</inlineHelpText>
        <label>Hudson RIL Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_OID_Amount__c</fullName>
        <description>Hudson RIL OID Amount</description>
        <inlineHelpText>Please enter the Hudson RIL OID Amount.</inlineHelpText>
        <label>Hudson RIL OID Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Term__c</fullName>
        <description>Hudson RIL Term</description>
        <inlineHelpText>Hudson RIL Term</inlineHelpText>
        <label>Hudson RIL Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Total_Payment__c</fullName>
        <description>Hudson RIL Total Payment</description>
        <inlineHelpText>Hudson RIL Total Payment</inlineHelpText>
        <label>Hudson RIL Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_RIL_Total_Payments__c</fullName>
        <description>Hudson RIL Total Payments</description>
        <inlineHelpText>Hudson RIL Total Payments</inlineHelpText>
        <label>Hudson RIL Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_APR__c</fullName>
        <description>Hudson SAC APR</description>
        <inlineHelpText>Hudson SAC APR</inlineHelpText>
        <label>Hudson SAC APR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Amount_Financed__c</fullName>
        <description>Hudson SAC Amount Financed</description>
        <inlineHelpText>Hudson SAC Amount Financed</inlineHelpText>
        <label>Hudson SAC Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Date__c</fullName>
        <description>Hudson SAC Date</description>
        <inlineHelpText>Hudson SAC Date</inlineHelpText>
        <label>Hudson SAC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Finance_Charge__c</fullName>
        <description>Hudson SAC Finance Charge</description>
        <inlineHelpText>Hudson SAC Finance Charge</inlineHelpText>
        <label>Hudson SAC Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Interconnect_Payment__c</fullName>
        <description>Hudson SAC Interconnect Payment</description>
        <inlineHelpText>Hudson SAC Interconnect Payment</inlineHelpText>
        <label>Hudson SAC Interconnect Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Payment__c</fullName>
        <description>Hudson SAC Payment</description>
        <inlineHelpText>Hudson SAC Payment</inlineHelpText>
        <label>Hudson SAC Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Template__c</fullName>
        <label>Hudson SAC Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Total_Payment__c</fullName>
        <description>Hudson SAC Total Payment</description>
        <inlineHelpText>Hudson SAC Total Payment</inlineHelpText>
        <label>Hudson SAC Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_SAC_Total_Payments__c</fullName>
        <description>Hudson SAC Total Payments</description>
        <inlineHelpText>Hudson SAC Total Payments</inlineHelpText>
        <label>Hudson SAC Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hudson_Signatory_1_Phone__c</fullName>
        <description>Hudson Signatory 1 Phone</description>
        <inlineHelpText>Hudson Signatory 1 Phone</inlineHelpText>
        <label>Hudson Signatory 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hudson_Void_Contract__c</fullName>
        <label>Hudson Void Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Husdon_SAC_Completion_Payment__c</fullName>
        <description>Husdon SAC Completion Payment</description>
        <inlineHelpText>Husdon SAC Completion Payment</inlineHelpText>
        <label>Husdon SAC Completion Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Corporate_Tax_Rate__c</fullName>
        <label>Income/Corporate Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KiloWatt_Monthly_CongaId__c</fullName>
        <formula>IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;MD&apos;), &apos;aAIC0000000CaRM&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;CA&apos;), &apos;aAIC0000000CaRC&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;CT&apos;), &apos;aAIC0000000CaRg&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;MA&apos;), &apos;aAIC0000000CaRW&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;NY&apos;), &apos;aAIC0000000CaRl&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;NJ&apos;), &apos;aAIC0000000CaS0&apos;, &apos;&apos;)</formula>
        <label>KiloWatt Monthly CongaId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KiloWatt_Prepaid_CongaId__c</fullName>
        <formula>IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;MD&apos;), &apos;aAIC0000000CaRH&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;CA&apos;), &apos;aAIC0000000CaR7&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;CT&apos;), &apos;aAIC0000000CaRb&apos;, &apos;&apos;)
&amp;
IF (ISPICKVAL(System_Design__r.Property__r.Property_State__c, &apos;MA&apos;), &apos;aAIC0000000CaRR&apos;, &apos;&apos;)</formula>
        <label>KiloWatt Prepaid CongaId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_FICO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low FICO ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderate_Home_Value_Adder_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moderate Home Value Adder Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderate_Income_Value_Adder_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moderate Income Value Adder Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_Avoided_Utility_Rate__c</fullName>
        <label>NRG Avoided Utility Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_Avoided_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NRG Calculator Avoided Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_Lease_Escalator__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>NRG Calculator Lease Escalator</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_Projected_Annual_Output__c</fullName>
        <label>NRG Calculator Projected Annual Output</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_Sales_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NRG Calculator Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_State_Grant__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NRG Calculator State Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_System_Size_kW__c</fullName>
        <label>NRG Calculator System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_Utility__c</fullName>
        <label>NRG Calculator Utility</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Calculator_Valid_SDQ__c</fullName>
        <formula>IF(AND(NOT(ISNULL(NRG_Calculator_System_Size_kW__c)) ,NOT(ISNULL(NRG_Calculator_Projected_Annual_Output__c )),NRG_Calculator_System_Size_kW__c  == System_Size_kW__c, NRG_Calculator_Projected_Annual_Output__c &lt; NRG_Projected_Annual_Output_kWh_y__c +1, NRG_Calculator_Projected_Annual_Output__c &gt; NRG_Projected_Annual_Output_kWh_y__c -1),FALSE,FALSE)</formula>
        <label>NRG Calculator Valid SDQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_Down_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NRG Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_EPC_Price__c</fullName>
        <label>NRG EPC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Input_Error_Description__c</fullName>
        <label>NRG Input Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NRG_Input_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRG Input Error</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>